compile-tests/fixtures/compile-errors/instantiation-not-enough-type-parameters/input.ts
import createValidator, { registerType } from "../../../../dist/typecheck.macro";

interface Foo<X, Y> {}
registerType("Foo");
createValidator<Foo<string>>();
